notes/bugs.txt
34. Tab completion vs. sudo -- shell crash

If we enter this much of a command:

    sudo -i [ ls /home/jao/.dbus/ses

tab-completion runs into permission problems trying to do its work.

----------------------------------------------------------------------

47. Emacs in background doesn't work

- Run emacs
- Ctrl-Z

Goes to background, but bg and fg do not revive it.

Complete "help interaction" when this is working.

As of about June 9, job control works on the console, but emacs never
suspends, and in fact it is no longer owned by the marcel
process. Exiting marcel leaves emacs running.

----------------------------------------------------------------------

48. Syntax error in .marcel.py should be handled more gracefully

jao@cheese:~/git/marcel/test$ marcel
Traceback (most recent call last):
  File "/usr/lib/python3.7/runpy.py", line 193, in _run_module_as_main
    "__main__", mod_spec)
  File "/usr/lib/python3.7/runpy.py", line 85, in _run_code
    exec(code, run_globals)
  File "/home/jao/git/marcel/marcel/main.py", line 211, in <module>
    MAIN = Main()
  File "/home/jao/git/marcel/marcel/main.py", line 90, in __init__
    self.env = marcel.env.Environment(self.config)
  File "/home/jao/git/marcel/marcel/env.py", line 136, in __init__
    self.read_config(config_file)
  File "/home/jao/git/marcel/marcel/env.py", line 201, in read_config
    exec(config_source, self.namespace, locals)
  File "<string>", line 64
    cat = [ map (f: (f, f.readlines())) | expand 1 ]
                  ^
SyntaxError: invalid syntax

----------------------------------------------------------------------

58. Infinite loop in help

There was a typo in the HELP for ps:

HELP = '''
{L,wrap=F}ps [-u|--user [USER]] [-g|--group [GROUP}] [-p|--pid PID] [-c|--command STRING]

Note that GROUP is followed by } instead of ]. That seemed to put 
help into an infinite loop.
----------------------------------------------------------------------

66. Parsing error due to whitespace

M-0.9.15 jao@cheese:~/git/marcel$ gen 3 | map(x: x+1)
Error: Running map(lambda: f'''map{x: x+1}''') on (0,): <lambda>() takes 0 positional arguments but 1 was given
Error: Running map(lambda: f'''map{x: x+1}''') on (1,): <lambda>() takes 0 positional arguments but 1 was given
Error: Running map(lambda: f'''map{x: x+1}''') on (2,): <lambda>() takes 0 positional arguments but 1 was given

Lexer.consolidate_tokens consolidates map and (...

IS THIS A BUG?

----------------------------------------------------------------------

67. Pipeline syntax needs to be generalized

    M-0.9.15 jao@cheese:~/git/marcel$ gen 3 | map (x: x + 5)
    5
    6
    7
    M-0.9.15 jao@cheese:~/git/marcel$ gen 3 | [x: map (x + 5)]
    Parsing error at position 8 of "...gen 3 | [x: map (x + 5)]...": Unexpected token type: Begin([)

This syntax:

    ... | [ ... ]

is rejected by the parser, which means we can't have pipelines with
parameters as literals. Fix the parser.

----------------------------------------------------------------------

69. Shell crashes on bad first arg to loop

M-0.9.17 jao@cheese:~$ loop (10, 1) [select (x, f: x > 0) | emit | map (x, f: (x-1, f*x))]
Traceback (most recent call last):
  File "/usr/lib/python3.8/runpy.py", line 193, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/usr/lib/python3.8/runpy.py", line 86, in _run_code
    exec(code, run_globals)
  File "/home/jao/git/marcel/marcel/main.py", line 271, in <module>
    MAIN.run()
  File "/home/jao/git/marcel/marcel/main.py", line 123, in run
    self.run_command(line)
  File "/home/jao/git/marcel/marcel/main.py", line 136, in run_command
    pipeline = parser.parse()
  File "/home/jao/git/marcel/marcel/parser.py", line 704, in parse
    return self.command()
  File "/home/jao/git/marcel/marcel/parser.py", line 710, in command
    return self.pipeline(None)
  File "/home/jao/git/marcel/marcel/parser.py", line 730, in pipeline
    op_sequence = Parser.ensure_sequence(self.op_sequence())
  File "/home/jao/git/marcel/marcel/parser.py", line 740, in op_sequence
    op_args = self.op_args()
  File "/home/jao/git/marcel/marcel/parser.py", line 761, in op_args
    op = self.create_op(op_token, arg_tokens)
  File "/home/jao/git/marcel/marcel/parser.py", line 824, in create_op
    op = self.create_op_builtin(op_token, arg_tokens)
  File "/home/jao/git/marcel/marcel/parser.py", line 852, in create_op_builtin
    args.append(x.value(self) if isinstance(x, Token) else x)
  File "/home/jao/git/marcel/marcel/parser.py", line 298, in value
    self._function = marcel.functionwrapper.FunctionWrapper(function=function,
  File "/home/jao/git/marcel/marcel/functionwrapper.py", line 56, in __init__
    self._globals = self._function.__globals__
AttributeError: 'tuple' object has no attribute '__globals__'

----------------------------------------------------------------------

79. less doesn't work

----------------------------------------------------------------------

84. Type of list is changed to tuple

    x = ([1, 2, 3])
    (x)

prints (1, 2, 3). I.e., list turns into tuple.

----------------------------------------------------------------------

85. Any env var can be deleted

Even important ones, like PROMPT. Some of them need to be protected.

----------------------------------------------------------------------

86. Need to describe the color scheme 

ColorScheme.__repr__? A command? There needs to be some way to let the
use see the color scheme.
